# mcp-shell

./: README.md  pyproject.toml
src/mcp_shell/: server.py
